--- a/css/main.css
+++ b/css/main.css
@@ -316,8 +316,9 @@ a {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: #afb1b8;
+  fill: currentColor;
   background-color: #ffffff10;
+  color: #afb1b8;
 }
 
 .social__link:focus, .social__link:hover {
@@ -578,16 +579,9 @@ a {
   background-color: #2f303a;
 }
 
-.footer .logo--down {
+.footer--colicondfoo {
+  fill: #ffffff;
   color: #ffffff;
-}
-
-.footer .social-title {
-  text-transform: uppercase;
-  color: var(--white-txt-color);
-  font-size: 14px;
-  line-height: 1.14;
-  margin-bottom: 20px;
 }
 
 .footer-section {
@@ -604,18 +598,22 @@ a {
   margin-left: 70px;
 }
 
-.footer__socicon {
-  fill: #fff;
+.logo--down {
+  color: #ffffff;
+}
+
+.social-title {
+  text-transform: uppercase;
+  color: var(--white-txt-color);
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 20px;
 }
 
 .social-footer {
   width: 208px;
   padding-top: 15px;
   margin-left: 70px;
-}
-
-.social__link {
-  fill: #ffffff;
 }
 
 .address {
@@ -757,7 +755,6 @@ a {
   transition: transform 260ms linear, opacity 260ms linear, -webkit-transform 260ms linear;
 }
 
-.button__close,
 .btn-modal {
   outline-style: none;
   padding: 0;
@@ -772,7 +769,6 @@ a {
   background-color: #ffffff;
 }
 
-.modal-close,
 .close-form {
   display: block;
   width: 20px;
@@ -784,20 +780,6 @@ a {
   cursor: pointer;
 }
 
-.modal-icon,
-.icon-modal {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 12px;
-  top: 10px;
-  fill: #212121;
-  -webkit-transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close:focus,
-.modal-close:hover,
 .btn-modal:focus,
 .close-form:focus,
 .close-form:hover {
@@ -847,30 +829,12 @@ a {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
-  /* #2196F3 */
   padding-left: 40px;
   -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea {
-  display: block;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
-  margin-top: 28px;
-  margin-bottom: 20px;
-  width: 100%;
-  height: 120px;
-  padding-left: 40px;
-  padding-top: 10px;
-  overflow: hidden;
-  resize: none;
-  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
+.cont-textarea,
 .modal > ul > li {
   position: relative;
 }
@@ -879,11 +843,6 @@ a {
   margin-top: 28px;
 }
 
-.dd {
-  position: relative;
-}
-
-/* .cont-textarea > label, */
 .modal > ul > li label {
   position: absolute;
   left: 60px;
@@ -902,7 +861,18 @@ a {
   cursor: pointer;
 }
 
-.modal-labelarea {
+.icon-modal {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 12px;
+  top: 10px;
+  fill: #212121;
+  -webkit-transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cont-textarea > label {
   position: absolute;
   -webkit-transform: translate(0%, 0%) scale(150%);
           transform: translate(0%, 0%) scale(150%);
@@ -918,109 +888,136 @@ a {
   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea:not(:placeholder-shown) + label,
-.modal-textarea:focus + label,
+.modal > div > textarea {
+  display: block;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  margin-top: 28px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 120px;
+  padding-left: 40px;
+  padding-top: 10px;
+  overflow: hidden;
+  resize: none;
+  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cont-textarea > textarea:focus + label,
+.cont-textarea > textarea:not(:placeholder-shown) + label,
 .modal > ul > li input:not(:placeholder-shown) + label,
 .modal > ul > li input:focus + label {
   outline-style: none;
+  /* color: #c4c4c4; */
   -webkit-transform: translate(-60px, -30px) scale(100%);
           transform: translate(-60px, -30px) scale(100%);
 }
 
-.modal-textarea::-webkit-input-placeholder,
+.cont-textarea > textarea::-webkit-input-placeholder,
 .modal > ul > li input::-webkit-input-placeholder {
   outline-style: none;
   color: #2196f3;
+  opacity: 0;
   -webkit-transform: translate(-220px, 0);
           transform: translate(-220px, 0);
-  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear;
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea:-ms-input-placeholder,
+.cont-textarea > textarea:-ms-input-placeholder,
 .modal > ul > li input:-ms-input-placeholder {
   outline-style: none;
   color: #2196f3;
+  opacity: 0;
   transform: translate(-220px, 0);
-  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear;
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea::-ms-input-placeholder,
+.cont-textarea > textarea::-ms-input-placeholder,
 .modal > ul > li input::-ms-input-placeholder {
   outline-style: none;
   color: #2196f3;
+  opacity: 0;
   transform: translate(-220px, 0);
-  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear;
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea::placeholder,
+.cont-textarea > textarea::placeholder,
 .modal > ul > li input::placeholder {
   outline-style: none;
   color: #2196f3;
+  opacity: 0;
   -webkit-transform: translate(-220px, 0);
           transform: translate(-220px, 0);
-  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear;
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), opacity 560ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea:focus::-webkit-input-placeholder,
+.cont-textarea > textarea:focus::-webkit-input-placeholder,
 .modal > ul > li input:focus::-webkit-input-placeholder {
   outline-style: none;
   color: #afb1b8;
+  opacity: 1;
   -webkit-transform: translate(0, 0);
           transform: translate(0, 0);
 }
 
-.modal-textarea:focus:-ms-input-placeholder,
+.cont-textarea > textarea:focus:-ms-input-placeholder,
 .modal > ul > li input:focus:-ms-input-placeholder {
   outline-style: none;
   color: #afb1b8;
+  opacity: 1;
   transform: translate(0, 0);
 }
 
-.modal-textarea:focus::-ms-input-placeholder,
+.cont-textarea > textarea:focus::-ms-input-placeholder,
 .modal > ul > li input:focus::-ms-input-placeholder {
   outline-style: none;
   color: #afb1b8;
+  opacity: 1;
   transform: translate(0, 0);
 }
 
-.modal-textarea:focus::placeholder,
+.cont-textarea > textarea:focus::placeholder,
 .modal > ul > li input:focus::placeholder {
   outline-style: none;
   color: #afb1b8;
+  opacity: 1;
   -webkit-transform: translate(0, 0);
           transform: translate(0, 0);
 }
 
-.modal-textarea:focus,
-.modal-textarea:hover,
+.cont-textarea > textarea:focus,
+.cont-textarea > textarea:hover,
 .modal > ul > li input:focus,
 .modal > ul > li input:hover {
   outline-style: none;
   border-color: #2196f3;
 }
 
-.modal-textarea:hover + label,
-.modal-textarea:focus + label,
+.cont-textarea > textarea:hover + label,
+.cont-textarea > textarea:focus + label,
 .modal > ul > li input:focus + label,
 .modal > ul > li input:hover + label {
   outline-style: none;
   color: #2196f3;
 }
 
-.modal > ul > li input:focus ~ .modal-icon,
-.modal > ul > li input:hover ~ .modal-icon {
+.modal > ul > li input:focus ~ .icon-modal,
+.modal > ul > li input:hover ~ .icon-modal {
   fill: #2196f3;
 }
 
@@ -1096,7 +1093,7 @@ a {
   background-image: url(../images/icon/svgM/Vector1.svg);
 }
 
-.modal__link {
+.modal__us {
   color: #2196f3;
   text-decoration: none;
   margin-left: 10px;
@@ -1104,7 +1101,7 @@ a {
   transition: all 1260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__link:hover {
+.modal__us:hover {
   color: #188ce8;
   text-decoration: underline;
   cursor: pointer;
