--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,61 @@ a {
   cursor: pointer;
 }
 
+.button {
+  font-family: Roboto;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:hover {
+  color: #ffffff;
+  background-color: #188ce8;
+  cursor: pointer;
+}
+
+.button__main {
+  width: 200px;
+  height: 50px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-style: 700;
+  line-height: 1.875;
+  color: #ffffff;
+  background-color: #2196f3;
+  line-height: 1.625;
+  letter-spacing: 6%;
+}
+
+.botton__icon {
+  position: relative;
+  display: inline-block;
+  top: 6px;
+  left: 5px;
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
+  /* transform: rotate(1deg); */
+}
+
 /* .email-foo > div > button:hover~ */
+.botton__icon:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .subscription__email-input--sub:hover, .subscription__email-input--sub:focus {
   border: 1px solid #188ce8;
 }
