--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -79,53 +79,53 @@
     cursor: pointer;
 }
 }
-// .button {
-//     font-family : Roboto;
-//     font-size: 16px;
-//     border: none;
-//     border-radius: 4px;
-//     box-shadow: $shadow-box;
-//     transition: background-color 250ms $cubic;
+.button {
+    font-family : Roboto;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: $shadow-box;
+    transition: background-color 250ms $cubic;
 
-//     &:hover {
-//         color: $colorTxt-main;
-//         background-color: $colorBtnBg-hover;
-//         cursor: pointer;
-//     }
+    &:hover {
+        color: $colorTxt-main;
+        background-color: $colorBtnBg-hover;
+        cursor: pointer;
+    }
 
 
-//     &__main {
-//         width: 200px;
-//         height: 50px;
-//         justify-content: center;
-//         align-items: center;
-//         font-style: 700;
-//         line-height: 1.875;
-//         color: $colorMaxLight;
-//         background-color: $colorBtnBg-activ;
-//         line-height: 1.625;
-//         letter-spacing: 6%;
-//     }
+    &__main {
+        width: 200px;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
+        font-style: 700;
+        line-height: 1.875;
+        color: $colorMaxLight;
+        background-color: $colorBtnBg-activ;
+        line-height: 1.625;
+        letter-spacing: 6%;
+    }
 // /*filter*/  
+  
+}    
+.botton__icon {
+    position: relative;
+    display: inline-block;
+    top: 6px;
+    left: 5px;
+    fill: $colorMaxLight;
+    width: 24px;
+    height: 24px;
+    /* transform: rotate(1deg); */
     
-// }    
-// .botton__icon {
-//     position: relative;
-//     display: inline-block;
-//     top: 6px;
-//     left: 5px;
-//     fill: $colorMaxLight;
-//     width: 24px;
-//     height: 24px;
-//     /* transform: rotate(1deg); */
-    
-//   }
+  }
   /* .email-foo > div > button:hover~ */
-  // .botton__icon:hover {
+  .botton__icon:hover {
     
-  //   transform: rotate(360deg);
-  //   transition: transform 1260ms $cubic;
-  // }
+    transform: rotate(360deg);
+    transition: transform 1260ms $cubic;
+  }
 
 
   $color--primary: #b29;
